--- a/Jsp/Jsp_Test/.settings/org.eclipse.wst.common.component
+++ b/Jsp/Jsp_Test/.settings/org.eclipse.wst.common.component
@@ -1,8 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="Jsp_Project01">
+        
+    <wb-module deploy-name="Jsp_Test">
+                
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
+                
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
-        <property name="context-root" value="Jsp_Project01"/>
-        <property name="java-output-path" value="/Jsp_Project01/build/classes"/>
+                
+        <property name="java-output-path" value="/Jsp_Test/build/classes"/>
+        <property name="context-root" value="Jsp_Test"/>
+            
     </wb-module>
+    
 </project-modules>
