--- a/Spring/MovieProject/src/main/webapp/resources/css/sb-admin-2.css
+++ b/Spring/MovieProject/src/main/webapp/resources/css/sb-admin-2.css
@@ -11279,15 +11279,51 @@ footer.sticky-footer .copyright {
 body.sidebar-toggled footer.sticky-footer {
   width: 100%;
 }
-
 .img-fit {
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
 }
 
-.mvtitle{
-	white-space: nowrap;
+.mvtitle {
+	font-weight: bolder;
+	color: #000000; white-space : nowrap;
 	text-overflow: ellipsis;
-    overflow: hidden;
+	overflow: hidden;
+	white-space: nowrap;
+}
+
+.btn-reservation {
+	color: #fff;
+	background-color: #e74a3b;
+	font-weight: bolder;
+	text-align: center;
+	vertical-align: middle;
+	border: none;
+	padding: 0.375rem 0.75rem;
+	font-size: 1rem;
+}
+.btn-check{
+	color: #fff;
+	background-color: #858796;
+	text-align: center;
+	width: 50px;
+	height:25px;
+	font-size:1rem;
+}
+.testDiv-blue{
+	background-color: #4e73df;
+	border: 2px solid black;
+}
+.testDiv-yellow{
+	background-color: #f6c23e;
+	border: 2px solid black;
+}
+.testDiv-gray{
+	background-color: #858796;
+	border: 2px solid black;
+}
+.testDiv-purple{
+	background-color: #6f42c1;
+	border: 2px solid black;
 }
