--- a/Spring/MovieProject/src/main/webapp/resources/css/sb-admin-2.css
+++ b/Spring/MovieProject/src/main/webapp/resources/css/sb-admin-2.css
@@ -11303,27 +11303,63 @@ body.sidebar-toggled footer.sticky-footer {
 	padding: 0.375rem 0.75rem;
 	font-size: 1rem;
 }
-.btn-check{
-	color: #fff;
-	background-color: #858796;
+.input-join {
+	border: 3px solid black;
+	font-weight: bold;
+	font-size: 0.8rem;
+	width: 60%;
+	border-radius: 1rem;
+	padding: 0.8rem 0.8rem;
+}
+.btn-join {
+  border:0.5;
+}
+
+div.mv-reservation {
+	margin-left: 1%;
+	width: 28%;
+	height: 1200px;
+	border: 2px solid red;
+	display: inline-block;
+}
+
+div.th-reservation {
+	width: 28%;
+	height: 1200px;
+	border: 2px solid blue;
+	display: inline-block;
+}
+
+div.day-reservation {
+	width: 13%;
+	height: 1200px;
+	border: 2px solid green;
+	display: inline-block;
+}
+
+div.time-reservation {
+	width: 28%;
+	height: 1200px;
+	border: 2px solid purple;
+	display: inline-block;
+}
+
+div.caption {
+	border: black;
+	background-color: black;
 	text-align: center;
-	width: 50px;
-	height:25px;
-	font-size:1rem;
+	color: white;
+	font-weight: bold;
 }
-.testDiv-blue{
-	background-color: #4e73df;
-	border: 2px solid black;
+
+div.info {
+	width: 80%;
+	margin-top: 5px;
+	margin-left: 5%;
+	border: none;
 }
-.testDiv-yellow{
-	background-color: #f6c23e;
-	border: 2px solid black;
-}
-.testDiv-gray{
-	background-color: #858796;
-	border: 2px solid black;
-}
-.testDiv-purple{
-	background-color: #6f42c1;
-	border: 2px solid black;
+.ageBtn{
+	width: 100%;
+	text-align: left;
+	font-weight: bold;
 }
